--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
   <!-- Optimized font loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&family=Roboto:wght@300;400;700&display=swap" as="style" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&family=Roboto:wght@300;400;700&display=swap" media="print" onload="this.media='all';this.onload=null" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" as="style" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" media="print" onload="this.media='all';this.onload=null" />
   <noscript>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&family=Roboto:wght@300;400;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" />
   </noscript>
   <script>
     (function() {
@@ -116,7 +116,7 @@
     (function() {
       const link = document.createElement('link');
       link.rel = 'stylesheet';
-      link.href = 'https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap';
+      link.href = 'https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&family=Inter:wght@300;400;500;600;700&display=swap';
       link.media = 'print';
       link.onload = function() { this.media = 'all'; };
       if (document.readyState === 'loading') {
@@ -134,8 +134,8 @@
     h1.text-3xl,
     h1.text-5xl,
     h1.text-6xl {
-      font-family: "Roboto Serif", serif, system-ui, -apple-system, sans-serif !important;
-      font-weight: 800 !important;
+      font-family: "Playfair Display", "Cormorant Garamond", Georgia, serif !important;
+      font-weight: 700 !important;
       font-size: clamp(1.875rem, 5vw, 3.75rem) !important;
       color: #ffffff !important;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5), 0 0 8px rgba(0,0,0,0.3) !important;
@@ -144,8 +144,10 @@
       display: block !important;
     }
     body {
-      font-family: system-ui, -apple-system, sans-serif;
+      font-family: "Inter", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       min-height: 100vh;
+      color: #2C3E50;
+      background-color: #FFFFFF;
     }
     
     /* Initial Loader Styles - Inline for immediate display */
@@ -173,8 +175,8 @@
     .initial-loader-spinner {
       width: 50px;
       height: 50px;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #8a2be2;
+      border: 4px solid #F8F9FA;
+      border-top: 4px solid #4A90E2;
       border-radius: 50%;
       animation: initial-loader-spin 1s linear infinite;
     }
