--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
   <link rel="preload" as="image" href="<%= encodeURI(og_image) %>" fetchpriority="high" />
   <% } %>
   
-  <!-- Optimized font loading -->
+  <!-- Optimized font loading - new theme: Fraunces + DM Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" as="style" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" media="print" onload="this.media='all';this.onload=null" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,600;0,9..144,700;1,9..144,400&display=swap" as="style" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,600;0,9..144,700;1,9..144,400&display=swap" media="print" onload="this.media='all';this.onload=null" />
   <noscript>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,600;0,9..144,700;1,9..144,400&display=swap" />
   </noscript>
   <script>
     (function() {
@@ -116,7 +116,7 @@
     (function() {
       const link = document.createElement('link');
       link.rel = 'stylesheet';
-      link.href = 'https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&family=Inter:wght@300;400;500;600;700&display=swap';
+      link.href = 'https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,600;0,9..144,700;1,9..144,400&display=swap';
       link.media = 'print';
       link.onload = function() { this.media = 'all'; };
       if (document.readyState === 'loading') {
@@ -129,12 +129,12 @@
     })();
   </script>
   
-  <!-- Critical CSS for LCP element - inline to prevent render blocking -->
+  <!-- Critical CSS for LCP - new theme colors and fonts -->
   <style>
     h1.text-3xl,
     h1.text-5xl,
     h1.text-6xl {
-      font-family: "Playfair Display", "Cormorant Garamond", Georgia, serif !important;
+      font-family: "Fraunces", Georgia, serif !important;
       font-weight: 700 !important;
       font-size: clamp(1.875rem, 5vw, 3.75rem) !important;
       color: #ffffff !important;
@@ -144,20 +144,20 @@
       display: block !important;
     }
     body {
-      font-family: "Inter", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      font-family: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       min-height: 100vh;
-      color: #2C3E50;
-      background-color: #FFFFFF;
+      color: #44403C;
+      background-color: #FAFAF9;
     }
     
-    /* Initial Loader Styles - Inline for immediate display */
+    /* Initial Loader - new theme */
     #initial-loader {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #ffffff;
+      background-color: #FAFAF9;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -175,8 +175,8 @@
     .initial-loader-spinner {
       width: 50px;
       height: 50px;
-      border: 4px solid #F8F9FA;
-      border-top: 4px solid #4A90E2;
+      border: 4px solid #F5F5F4;
+      border-top: 4px solid #0F766E;
       border-radius: 50%;
       animation: initial-loader-spin 1s linear infinite;
     }
@@ -184,8 +184,8 @@
     .initial-loader-text {
       margin-top: 20px;
       font-size: 16px;
-      color: #555;
-      font-family: system-ui, -apple-system, sans-serif;
+      color: #78716C;
+      font-family: "DM Sans", system-ui, -apple-system, sans-serif;
     }
     
     @keyframes initial-loader-spin {
